Finalizando para subir no git dos devs

--- a/web/layouts/sistema-admin/cabecalho.phtml
+++ b/web/layouts/sistema-admin/cabecalho.phtml
@@ -157,7 +157,7 @@
                     </svg>
                 </a>
                 <span class="ms-2">
-                    <b><?= $_SESSION['administrador']->getNome(); ?></b>
+                    <b><?= Session::get(TipoUsuarioEnum::ADMINISTRADOR->session_key())->getNome(); ?></b>
                 </span>
             </div>
         </div>
@@ -182,7 +182,7 @@
                     </div>
                     <ul tabindex="0" class="menu dropdown-content bg-base-100 rounded-box z-[1] mt-4 w-52 p-2 shadow">
                         <li>
-                            <a href="/usuario/logout">
+                            <a href="/autenticacao/logout">
                                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-4">
                                     <path stroke-linecap="round" stroke-linejoin="round" d="M5.636 5.636a9 9 0 1 0 12.728 0M12 3v9"/>
                                 </svg>
