--- a/web/views/autenticacao/login.phtml
+++ b/web/views/autenticacao/login.phtml
@@ -30,7 +30,7 @@
                                 <span class="ms-2 label-text">Lembrar meu usuário</span>
                             </label>
                         </div>
-                        <a href="/usuario/esqueci-senha" class="link-success">Esqueci minha senha</a>
+                        <a href="/autenticacao/esqueci-senha" class="link-success">Esqueci minha senha</a>
                     </div>
                     <div class="mt-5 flex justify-end items-center">
                         <button id="icon-button_candidato" class="btn btn-success btn-block" type="submit">
@@ -82,7 +82,7 @@
                                 <span class="ms-2 label-text">Lembrar meu usuário</span>
                             </label>
                         </div>
-                        <a href="/usuario/esqueci-senha" class="link-primary">Esqueci minha senha</a>
+                        <a href="/autenticacao/esqueci-senha" class="link-primary">Esqueci minha senha</a>
                     </div>
                     <div class="mt-5 flex justify-end items-center">
                         <button id="icon-button_empresa" class="btn btn-primary btn-block" type="submit">
