--- a/web/views/candidato/listar.phtml
+++ b/web/views/candidato/listar.phtml
@@ -1,6 +1,12 @@
-<div class="overflow-x-auto flex justify-center w-full">
-    <table class="border-collapse table-md table-zebra border-collapse dark:border-slate-500 bg-white dark:bg-slate-800 text-sm shadow-sm">
-        <caption class="text-slate-500 dark:text-slate-400 pb-4 text-md caption-top p-4">Minhas vagas</caption>
+<div class="overflow-x-auto flex justify-center w-full mb-10 mt-5">
+    <table class="border-collapse table-sm table-zebra border-collapse dark:border-slate-500 bg-white dark:bg-slate-800 text-sm shadow-sm w-3/5">
+        <caption class="text-slate-500 dark:text-slate-400 pb-4 text-md caption-top">
+            <div class="flex">
+                <div class="w-full flex items-center justify-start">
+                    <h2 class="">Minhas vagas</h2>
+                </div>
+            </div>
+        </caption>
         <thead class="bg-slate-50 dark:bg-slate-700">
         <tr>
             <th class="border border-slate-300 dark:border-slate-600 font-semibold text-slate-900 dark:text-slate-200">#</th>
@@ -28,27 +34,27 @@
                 <td class="border border-slate-300 dark:border-slate-700 text-slate-500 dark:text-slate-400"><?= $vaga->getVaga()->getStatus(true) ?></td>
                 <td class="border border-slate-300 dark:border-slate-700 text-slate-500 dark:text-slate-400"><?= $vaga->getStatus(true) ?></td>
                 <td class="border border-slate-300 dark:border-slate-700 text-slate-500 dark:text-slate-400">
-                    <div class="flex flex-col items-center justify-center space-y-2">
-
-                    <a href="/vaga/exibir?id=<?= $vaga->getVaga()->getId() ?>" title="Ver" class="btn btn-sm btn-primary w-[150px] text-start"  ">
-                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-5">
-                            <path stroke-linecap="round" stroke-linejoin="round" d="m15.75 15.75-2.489-2.489m0 0a3.375 3.375 0 1 0-4.773-4.773 3.375 3.375 0 0 0 4.774 4.774ZM21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z"/>
-                        </svg>
-                        Detalhes
-                    </a>
-                    <?php
-                    /** @var array<Proposta> $propostas */
-                    foreach ($propostas as $proposta) : ?>
-                        <?php if (!empty($proposta) && $proposta->getVaga()->getId() == $vaga->getVaga()->getId() && $proposta->getAceite() == PropostaStatusEnum::Aguardando->value) : ?>
-                            <a class="btn btn-sm btn-success w-[150px]" href="/proposta/exibir?vagaId=<?= $proposta->getVaga()->getId() ?>">
-                                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-5">
-                                    <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 14.25v-2.625a3.375 3.375 0 0 0-3.375-3.375h-1.5A1.125 1.125 0 0 1 13.5 7.125v-1.5a3.375 3.375 0 0 0-3.375-3.375H8.25m5.231 13.481L15 17.25m-4.5-15H5.625c-.621 0-1.125.504-1.125 1.125v16.5c0 .621.504 1.125 1.125 1.125h12.75c.621 0 1.125-.504 1.125-1.125V11.25a9 9 0 0 0-9-9Zm3.75 11.625a2.625 2.625 0 1 1-5.25 0 2.625 2.625 0 0 1 5.25 0Z" />
+                    <div class="flex justify-center space-x-2">
+                        <div class="tooltip" data-tip="Ver detalhes da vaga">
+                            <a href="/vaga/exibir?id=<?= $vaga->getVaga()->getId() ?>" class="btn btn-xs h-8 w-8 border btn-square border-accent-content/15" target="_blank">
+                                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-4">
+                                    <path stroke-linecap="round" stroke-linejoin="round" d="m21 21-5.197-5.197m0 0A7.5 7.5 0 1 0 5.196 5.196a7.5 7.5 0 0 0 10.607 10.607Z"/>
                                 </svg>
-                                Ver proposta
                             </a>
-                        <?php endif; ?>
-                    <?php endforeach; ?>
-
+                        </div>
+                        <?php
+                        /** @var array<Proposta> $propostas */
+                        foreach ($propostas as $proposta) : ?>
+                            <?php if (!empty($proposta) && $proposta->getVaga()->getId() == $vaga->getVaga()->getId() && $proposta->getAceite() == PropostaStatusEnum::Aguardando->value) : ?>
+                                <div class="tooltip" data-tip="Ver proposta">
+                                    <a href="/proposta/exibir?vagaId=<?= 1 //$proposta->getVaga()->getId() ?? '1'        ?>" class="btn btn-xs btn-success h-8 w-8 border btn-square border-accent-content/15">
+                                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-5">
+                                            <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 14.25v-2.625a3.375 3.375 0 0 0-3.375-3.375h-1.5A1.125 1.125 0 0 1 13.5 7.125v-1.5a3.375 3.375 0 0 0-3.375-3.375H8.25m5.231 13.481L15 17.25m-4.5-15H5.625c-.621 0-1.125.504-1.125 1.125v16.5c0 .621.504 1.125 1.125 1.125h12.75c.621 0 1.125-.504 1.125-1.125V11.25a9 9 0 0 0-9-9Zm3.75 11.625a2.625 2.625 0 1 1-5.25 0 2.625 2.625 0 0 1 5.25 0Z"/>
+                                        </svg>
+                                    </a>
+                                </div>
+                            <?php endif; ?>
+                        <?php endforeach; ?>
                     </div>
                 </td>
             </tr>
