--- a/web/views/error/index.phtml
+++ b/web/views/error/index.phtml
@@ -1,6 +1,12 @@
-<div class="error404">
-    <img src="/assets/images/404.png"><br>
-    <p>Oops!</p>
-    <p>A página que você tentou acessar não pode ser encontrada.</p>
-    <p>Por favor, tente novamente. Se o problema persistir, contate o suporte do sistema.</p>
+<div class="text-center mt-20">
+    <h1 class="mb-4 text-6xl font-semibold text-blue-500">404</h1>
+    <p class="mb-4 text-lg text-gray-600">Oops! A página que você tentou acessar não pode ser encontrada.<br>
+        Por favor, tente novamente. Se o problema persistir, contate o suporte do sistema..</p>
+    <div class="animate-bounce">
+        <svg class="mx-auto h-16 w-16 text-blue-500" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 19l9 2-9-18-9 18 9-2zm0 0v-8"></path>
+        </svg>
+    </div>
+    <p class="mt-4 text-gray-600">Volte para a <a href="/" class="text-blue-500">home</a>.</p>
 </div>
+
