--- a/web/views/filial/index.phtml
+++ b/web/views/filial/index.phtml
@@ -126,7 +126,7 @@
         <caption class="text-slate-500 dark:text-slate-400 pb-4 text-md caption-top">
             <div class="flex">
                 <div class="w-full flex items-center justify-start">
-                    <h2 class="shadow">Nossas filiais</h2>
+                    <h2 class="">Nossas filiais</h2>
                 </div>
                 <div class="flex justify-end">
                     <button class="btn btn-success btn-sm text-white" onclick="modal.showModal()" id="cadastrar">
@@ -184,7 +184,7 @@
 
         botoes.forEach(function(item){
             item.addEventListener('click', function(event) {
-                fetch('/filial/detalhes', {
+                fetch('/filial/detalhesJson', {
                     method: 'POST',
                     headers: {
                         'Content-type': 'application/json'
