--- a/web/views/habilidade/index.phtml
+++ b/web/views/habilidade/index.phtml
@@ -55,7 +55,7 @@
         <caption class="text-slate-500 dark:text-slate-400 pb-4 text-md caption-top">
             <div class="flex">
                 <div class="w-full flex items-center justify-start">
-                    <h2 class="shadow">Habilidades</h2>
+                    <h2 class="">Habilidades</h2>
                 </div>
                 <div class="flex justify-end">
                     <button class="btn btn-success btn-sm text-white" id="cadastrar" onclick="modal.showModal()">
@@ -72,7 +72,7 @@
             <th class="border border-slate-300 dark:border-slate-600 font-semibold text-slate-900 dark:text-slate-200 whitespace-nowrap w-0">#</th>
             <th class="border border-slate-300 dark:border-slate-600 font-semibold text-slate-900 dark:text-slate-200 whitespace-nowrap w-auto">Categoria</th>
             <th class="border border-slate-300 dark:border-slate-600 font-semibold text-slate-900 dark:text-slate-200 whitespace-nowrap w-auto">Habilidades</th>
-            <?php if (isset($_SESSION['administrador'])) : ?>
+            <?php if (!is_null(Session::get(TipoUsuarioEnum::ADMINISTRADOR->session_key()))) : ?>
                 <th class="border border-slate-300 dark:border-slate-600 font-semibold text-slate-900 dark:text-slate-200 whitespace-nowrap w-0">
                     <div class="flex justify-center items-center">
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" fill="currentColor" class="size-4">
@@ -91,7 +91,7 @@
                 <td class="border border-slate-300 dark:border-slate-700 text-slate-500 dark:text-slate-400"><?= $valorHabilidade->getId() ?></td>
                 <td class="border border-slate-300 dark:border-slate-700 text-slate-500 dark:text-slate-400 whitespace-nowrap"><?= $valorHabilidade->getCategoria()->getNome() ?></td>
                 <td class="border border-slate-300 dark:border-slate-700 text-slate-500 dark:text-slate-400 whitespace-nowrap"><?= $valorHabilidade->getHabilidade() ?></td>
-                <?php if (isset($_SESSION['administrador'])) : ?>
+                <?php if (!is_null(Session::get(TipoUsuarioEnum::ADMINISTRADOR->session_key()))) : ?>
                     <td class="border border-slate-300 dark:border-slate-700 text-slate-500 dark:text-slate-400">
                         <div class="flex justify-center space-x-1">
                             <button class=" btn btn-xs h-8 w-8 border btn-square border-accent-content/15" name="editar" data-habilidadeid="<?= $valorHabilidade->getId() ?>" title="Editar">
@@ -134,7 +134,7 @@
 
         botoes.forEach(function (item) {
             item.addEventListener('click', function () {
-                fetch('/habilidade/detalhes', {
+                fetch('/habilidade/detalhesJson', {
                     method: 'POST',
                     headers: {
                         'Content-type': 'application/json'
